--- a/Flyaround/app/Resources/views/terrain/index.html.twig
+++ b/Flyaround/app/Resources/views/terrain/index.html.twig
@@ -9,9 +9,9 @@
                 <th>Id</th>
                 <th>Name</th>
                 <th>Icao</th>
-                <th>Lattitude</th>
+                <th>Latitude</th>
                 <th>Longitude</th>
-                <th>Adress</th>
+                <th>Address</th>
                 <th>City</th>
                 <th>Zipcode</th>
                 <th>Country</th>
@@ -24,9 +24,9 @@
                 <td><a href="{{ path('terrain_show', { 'id': terrain.id }) }}">{{ terrain.id }}</a></td>
                 <td>{{ terrain.name }}</td>
                 <td>{{ terrain.icao }}</td>
-                <td>{{ terrain.lattitude }}</td>
+                <td>{{ terrain.latitude }}</td>
                 <td>{{ terrain.longitude }}</td>
-                <td>{{ terrain.adress }}</td>
+                <td>{{ terrain.address }}</td>
                 <td>{{ terrain.city }}</td>
                 <td>{{ terrain.zipcode }}</td>
                 <td>{{ terrain.country }}</td>
