--- a/Flyaround/app/Resources/views/terrain/show.html.twig
+++ b/Flyaround/app/Resources/views/terrain/show.html.twig
@@ -18,16 +18,16 @@
                 <td>{{ terrain.icao }}</td>
             </tr>
             <tr>
-                <th>Lattitude</th>
-                <td>{{ terrain.lattitude }}</td>
+                <th>Latitude</th>
+                <td>{{ terrain.latitude }}</td>
             </tr>
             <tr>
                 <th>Longitude</th>
                 <td>{{ terrain.longitude }}</td>
             </tr>
             <tr>
-                <th>Adress</th>
-                <td>{{ terrain.adress }}</td>
+                <th>Address</th>
+                <td>{{ terrain.address }}</td>
             </tr>
             <tr>
                 <th>City</th>
