--- a/Flyaround/src/WCS/CoavBundle/Resources/views/Default/index.html.twig
+++ b/Flyaround/src/WCS/CoavBundle/Resources/views/Default/index.html.twig
@@ -13,6 +13,6 @@
         <a href="{{ path('terrain_index') }}">Voir les terrains</a>
     </li>
     <li>
-        <a href="{{ path('review_index') }}">Voir les reviews</a>
+        <a href="{{ path('review_index') }}">Voir tous les avis utilisateurs</a>
     </li>
 </ul>
