--- a/Flyaround/app/Resources/views/reservation/index.html.twig
+++ b/Flyaround/app/Resources/views/reservation/index.html.twig
@@ -9,6 +9,8 @@
                 <th>Id</th>
                 <th>Nbreservedseats</th>
                 <th>Publicationdate</th>
+                <th>Passenger</th>
+                <th>Flight</th>
                 <th>Wasdone</th>
                 <th>Actions</th>
             </tr>
@@ -19,6 +21,8 @@
                 <td><a href="{{ path('reservation_show', { 'id': reservation.id }) }}">{{ reservation.id }}</a></td>
                 <td>{{ reservation.nbReservedSeats }}</td>
                 <td>{% if reservation.publicationDate %}{{ reservation.publicationDate|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{{ reservation.passenger }}</td>
+                <td>{{ reservation.flight }}</td>
                 <td>{% if reservation.wasDone %}Yes{% else %}No{% endif %}</td>
                 <td>
                     <ul>
