--- a/Flyaround/app/Resources/views/reservation/show.html.twig
+++ b/Flyaround/app/Resources/views/reservation/show.html.twig
@@ -18,6 +18,14 @@
                 <td>{% if reservation.publicationDate %}{{ reservation.publicationDate|date('Y-m-d H:i:s') }}{% endif %}</td>
             </tr>
             <tr>
+                <th>Passenger</th>
+                <td>{{ reservation.passenger }}</td>
+            </tr>
+            <tr>
+                <th>Flight</th>
+                <td>{{ reservation.flight }}</td>
+            </tr>
+            <tr>
                 <th>Wasdone</th>
                 <td>{% if reservation.wasDone %}Yes{% else %}No{% endif %}</td>
             </tr>
