--- a/Flyaround/app/Resources/views/user/index.html.twig
+++ b/Flyaround/app/Resources/views/user/index.html.twig
@@ -19,7 +19,6 @@
                 <th>Isacertifiedpilot</th>
                 <th>Isactive</th>
                 <th>Actions</th>
-                <th>Reviews</th>
             </tr>
         </thead>
         <tbody>
@@ -31,13 +30,10 @@
                 <td>{{ user.lastName }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.phoneNumber }}</td>
-                <td>{% if user.birthDate %}{{ user.birthDate|date('Y-m-d') }}{% endif %}</td>
+                <td>{% if user.birthDate %}{{ user.birthDate|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>{% if user.creationDate %}{{ user.creationDate|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>{{ user.role }}</td>
                 <td>{{ user.note }}</td>
-                {% for review in user.reviews %}
-                    <td>{{ review }}</td>
-                {% endfor %}
                 <td>{% if user.isACertifiedPilot %}Yes{% else %}No{% endif %}</td>
                 <td>{% if user.isActive %}Yes{% else %}No{% endif %}</td>
                 <td>
