--- a/Flyaround/app/Resources/views/user/show.html.twig
+++ b/Flyaround/app/Resources/views/user/show.html.twig
@@ -31,7 +31,7 @@
             </tr>
             <tr>
                 <th>Birthdate</th>
-                <td>{% if user.birthDate %}{{ user.birthDate|date('Y-m-d') }}{% endif %}</td>
+                <td>{% if user.birthDate %}{{ user.birthDate|date('Y-m-d H:i:s') }}{% endif %}</td>
             </tr>
             <tr>
                 <th>Creationdate</th>
